--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@ng-bootstrap/ng-bootstrap": "4.1.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "rxjs": "~6.6.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
